# spiked-neural-network

./: .clang-tidy  .gitignore  .gitmodules  AbstractActivation.hpp  CMakeLists.txt  IzhikevichActivation.cpp  IzhikevichActivation.hpp  README.md  SigmoidActivation.cpp  SigmoidActivation.hpp  SpikeDNNet.cpp  SpikeDNNet.hpp  Utility.hpp  configure.sh  main.cpp  make_plots.sh  plot.py
cmake/: Findxtl.cmake  clang-cxx-dev-tools.cmake
include/: .clang-format  AbstractActivation.hpp  IzhikevichActivation.hpp  SigmoidActivation.hpp  SpikeDNNet.hpp  Utility.hpp  debug_header.hpp  precompiled.hpp
include/ActivationFunctions/: AbstractActivation.hpp  IzhikevichActivation.hpp  SigmoidActivation.hpp
include/C_API/: c_api.hpp
include/Optimization/: Optimization.hpp
include/Utility/: Integrate.hpp  Utility.hpp  debug_header.hpp
plot_data/: control.dmp  control.npy  error.dmp  error.npy  estimation.dmp  estimation.npy  estimation2.npy  integration_test.npy  integration_test_source.npy  neuro1.npy  neuro12.npy  neuro2.npy  neuro21.npy  target.dmp  target.npy  target2.npy  timeline.dmp  timeline.npy  wdiff1.npy  wdiff2.npy
scripts/: .gitignore  build.sh  configure.sh  format.sh  make_plots.sh  plot.py  run.sh  tidy_code.sh  tune_dnn.py  verify.py
src/: .clang-format  Integrate.cpp  IzhikevichActivation.cpp  Optimization.cpp  SigmoidActivation.cpp  SpikeDNNet.cpp  Utility.cpp  c_api.cpp
train_data/: tr_control.dmp  tr_control.npy  tr_target.dmp  tr_target.npy  vl_control.dmp  vl_control.npy  vl_target.dmp  vl_target.npy
